# orb-trading-assistant

./: .gitignore  README.md  package-lock.json  package.json
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: chart_analysis.py
backend/app/core/: config.py
backend/app/schemas/: chart_analysis.py
backend/app/services/llm/: base.py  gemini_service.py  llm_factory.py
backend/app/tests/: test_chart_analysis_debug.py  test_health.py
docs/: architecture.md
frontend/: README.md  package.json
frontend/src/app/: page.tsx  styled-components-registry.tsx
frontend/src/domain/chart-review/: chartAnalysisPlaceholder.ts
frontend/src/domain/orb/: riskGuardrails.ts
frontend/src/features/pre-market-bias/: index.ts  preMarketBiasStorage.types.ts
frontend/src/features/setup-entry/: index.ts
frontend/src/features/setup-history/: index.ts  setupStorage.types.ts
frontend/src/styles/: theme.ts  tokens.ts
src/app/: layout.tsx  providers.tsx
src/components/ui/: index.ts
src/components/ui/Badge/: Badge.styles.tsx  Badge.types.ts
src/components/ui/Button/: Button.styles.tsx  (+1 more)
src/domain/chart-review/: models.ts  validateChartSet.ts
src/domain/orb/: evaluateSetup.ts  journalAnalytics.ts  models.ts  preMarketBias.ts  riskReward.ts
src/features/chart-review/: index.ts
src/features/daily-risk-guardrails/: index.ts  riskSettingsStorage.ts  riskSettingsStorage.types.ts
src/features/pre-market-bias/: preMarketBiasStorage.ts
src/features/setup-history/: setupStorage.ts
src/styles/: GlobalStyles.ts  styled.d.ts
(+78 files in other folders)
