[project]
name = "orb-decision-support-api"
version = "0.1.0"
description = "FastAPI backend for the ORB Trading Assistant decision support system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.6.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]
